# bitaxe-esp-miner

./: .bazelrc  .cursorignore  .gitignore  .gitmodules  AGENTS.bright-builds.md  AGENTS.md  BUILD.bazel  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Justfile  MODULE.bazel  PROVENANCE.md  README.md  about.hbs  about.toml  bright-builds-rules.audit.md  pool-credentials.env.example  pool-credentials.json.example  wifi-credentials.json.example
crates/bitaxe-api/: BUILD.bazel  Cargo.toml
crates/bitaxe-api/fixtures/api/: asic-settings-ultra205.json  command-responses.json  live-telemetry-cases.json  log-buffer-cases.json  settings-patch-cases.json  statistics-empty-compatible.json  system-info-ultra205-safe.json
crates/bitaxe-api/src/: asic.rs  boot_identity.rs  build_identity.rs  commands.rs  deferred_effect.rs  lib.rs  logs.rs  mining.rs  observation.rs  operator_snapshot.rs  operator_snapshot_publication.rs  phase33_evidence.rs  platform_identity.rs  route_shell.rs  runtime_projection.rs  scoreboard.rs  settings.rs  snapshot.rs  static_plan.rs  statistics.rs  system.rs  telemetry.rs  update_plan.rs  v12_settings.rs  websocket_state.rs  wire.rs
crates/bitaxe-asic/: BUILD.bazel  Cargo.toml
crates/bitaxe-asic/fixtures/bm1366/: init-plan-cases.json  production-work-redacted.json  protocol-cases.json  transcript-cases.json  work-result-cases.json
crates/bitaxe-asic/src/: bm1366.rs  dispatch.rs  error.rs  lib.rs  work_result_investigation.rs
crates/bitaxe-asic/src/bm1366/: accepted_state.rs  adapter_gate.rs  chip_detect.rs  command.rs  crc.rs  frequency_voltage.rs  init_plan.rs  mining_ready.rs  observation.rs  packet.rs  production.rs  registers.rs  result.rs  transcript.rs  uart_accumulate.rs  upstream_init_frames.rs  work.rs
crates/bitaxe-config/: BUILD.bazel  Cargo.toml
crates/bitaxe-config/fixtures/: catalog.json  nvs-migrations.json  nvs-schema.json  settings-updates.json  ultra-205-defaults.csv
crates/bitaxe-config/src/: catalog.rs  confirmed_snapshot.rs  defaults.rs  golden_tests.rs  lib.rs  nvs.rs  persistence.rs  settings.rs  validation.rs
crates/bitaxe-core/: BUILD.bazel  Cargo.toml
crates/bitaxe-core/src/: lib.rs  runtime_health.rs
crates/bitaxe-safety/: BUILD.bazel  Cargo.toml
crates/bitaxe-safety/fixtures/safety/: fan-pid-cases.json  overheat-state-cases.json  power-telemetry-cases.json  self-test-lifecycle-cases.json  thermal-fault-cases.json  voltage-effect-cases.json  watchdog-step-cases.json
crates/bitaxe-safety/src/: effects.rs  evidence.rs  fault.rs  lib.rs  mining_preconditions.rs  observation.rs  power.rs  self_test.rs  sensor_acquisition.rs  status.rs  thermal.rs  watchdog.rs
crates/bitaxe-stratum/: BUILD.bazel  Cargo.toml
crates/bitaxe-stratum/fixtures/v1/: fake-pool-transcripts.json  mining-job-cases.json  protocol-cases.json
crates/bitaxe-stratum/src/: error.rs  jsonrpc.rs  lib.rs  v1.rs
crates/bitaxe-stratum/src/v1/: bridge_orchestration.rs  coinbase.rs  controlled_runtime.rs  fake_pool.rs  live_runtime.rs  messages.rs  mining.rs  mining_loop.rs  production_work.rs  queue.rs  state.rs  submit_response.rs  telemetry_projection.rs
crates/bitaxe-test-support/: BUILD.bazel  Cargo.toml
crates/bitaxe-test-support/src/: lib.rs
firmware/bitaxe/: BUILD.bazel  Cargo.toml  build.rs  partitions-ultra205.csv  sdkconfig.defaults
firmware/bitaxe/src/: asic_adapter.rs  boot_evidence.rs  boot_validation.rs  controlled_mining_runtime.rs  display_adapter.rs  filesystem.rs  http_api.rs  live_stratum_runtime.rs  log_buffer.rs  main.rs  mining_evidence_mode.rs  network_stack.rs  operator_sensor_runtime.rs  operator_snapshot_retention.rs  operator_snapshot_retention_production_tests.rs  ota_update.rs  platform_identity.rs  rtc_boot_ordinal.rs  runtime_health_adapter.rs  runtime_snapshot.rs  runtime_uptime.rs  safety_adapter.rs  settings_adapter.rs  static_files.rs  websocket_api.rs  wifi_adapter.rs
firmware/bitaxe/src/asic_adapter/: chip_detect_investigation.rs  production.rs  reset.rs  status.rs  uart.rs  work_result_investigation.rs
firmware/bitaxe/src/safety_adapter/: asic_enable.rs  ds4432u.rs  emc2101.rs  i2c_bus.rs  ina260.rs  observation_store.rs  phase27_bring_up.rs  power.rs  power_probe.rs  thermal.rs  watchdog.rs
firmware/bitaxe/static/www/: index.html
scripts/: BUILD.bazel  bm1366-init-tx-dump.sh  bootstrap-esp.sh  build-firmware.sh  build-identity-cache-invalidation-test.sh  build-identity-pathspecs.txt  build-identity-status-test.sh  build-identity-status.sh  build_identity.bzl  detect-ultra205-test.sh  detect-ultra205.sh  diagnose-ultra205-late-attach-test.sh  diagnose-ultra205-late-attach.sh  diagnose-ultra205-session-test.sh  diagnose-ultra205-session.sh  diagnose-ultra205-uart-capture-test.sh  diagnose-ultra205-uart-capture.sh  esp-doctor-test.sh  esp-doctor.sh  package-firmware-test.sh  package-firmware.sh  phase12-mining-smoke-preflight.sh  phase13-firmware-ota-smoke-test.sh  phase13-firmware-ota-smoke.sh  phase13-http-static-smoke-test.sh  phase13-http-static-smoke.sh  phase13-monitor-capture-test.sh  phase13-monitor-capture.sh  phase13-os-native-reader.pl  phase13-recovery-regression-test.sh  phase13-recovery-regression.sh  phase13-uart-native-reader-test.py  phase13-uart-native-reader.py  phase14-display-input-test.sh  phase14-display-input.sh  phase14-live-telemetry-test.sh  phase14-live-telemetry.sh  phase14-power-voltage-test.sh  phase14-power-voltage.sh  phase14-self-test-watchdog-load-test.sh  (+127 more)
tools/flash/: BUILD.bazel  Cargo.toml
tools/flash/src/: esp32s3_image.rs  main.rs  package_admission.rs
tools/parity/: BUILD.bazel  Cargo.toml
tools/parity/fixtures/phase35/: eligible.json
tools/parity/src/: api_compare.rs  claim_ladder.rs  main.rs  mining_allow.rs  operator_evidence.rs  operator_snapshot_evidence.rs  phase32_source_guard.rs  phase33_source_guard.rs  phase34_source_guard.rs  phase35_evidence.rs  phase35_promotion.rs  release_evidence.rs  release_gate.rs  safety_allow.rs  v12_admission.rs
tools/xtask/: BUILD.bazel  Cargo.toml
tools/xtask/src/: main.rs  package_manifest.rs  partition_contract.rs
(+1522 files in other folders)
