package(default_visibility = ["//visibility:public"])

# Package manifests and firmware boot logs record git HEAD, so package-producing
# and firmware-producing actions need git state as explicit inputs instead of
# only reading it from git at execution time.
exports_files([
    ".git/HEAD",
    ".git/logs/HEAD",
    "docs/parity/evidence/phase-22-claim-ladder-and-safety-preconditions/claim-ladder.md",
])
