package(default_visibility = ["//visibility:public"])

# Package manifests and firmware boot logs record git HEAD, so package-producing
# and firmware-producing actions need git state as explicit inputs instead of
# only reading it from git at execution time.
exports_files([
    ".git/HEAD",
    ".git/logs/HEAD",
    ".planning/milestones/v1.1-REQUIREMENTS.md",
    ".planning/milestones/v1.1-phases/28.1.1-bm1366-nonce-production-wire-parity/28.1.1-VERIFICATION.md",
    ".planning/milestones/v1.1-phases/28.1-live-mining-blocker-fix-h4-w13-orchestration-parity-discrimi/28.1-VALIDATION.md",
    "Justfile",
    "docs/parity/evidence/phase-22-claim-ladder-and-safety-preconditions/claim-ladder.md",
    "docs/parity/checklist.md",
    "docs/parity/evidence/phase-29-evidence-workflow-automation-closure/summary.md",
    "docs/parity/evidence/phase-30-live-share-outcome-and-verified-promotion/disposition.md",
    "docs/parity/evidence/phase-30-live-share-outcome-and-verified-promotion/conclusion.md",
])
