[workspace]
resolver = "2"
members = [
    "crates/bitaxe-api",
    "crates/bitaxe-asic",
    "crates/bitaxe-config",
    "crates/bitaxe-core",
    "crates/bitaxe-stratum",
    "crates/bitaxe-test-support",
    "firmware/bitaxe",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
camino = "1.2.3"
clap = { version = "4.6.1", features = ["derive"] }
embuild = "0.33.1"
esp-idf-svc = "0.52.1"
esp-idf-sys = "0.37.2"
log = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
