load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "bootstrap_esp",
    srcs = ["bootstrap-esp.sh"],
)

sh_binary(
    name = "build_firmware",
    srcs = ["build-firmware.sh"],
)

sh_binary(
    name = "detect_ultra205",
    srcs = ["detect-ultra205.sh"],
)

sh_binary(
    name = "esp_doctor",
    srcs = ["esp-doctor.sh"],
)

sh_binary(
    name = "verify_reference_clean",
    srcs = ["verify-reference-clean.sh"],
)

sh_binary(
    name = "package_firmware",
    srcs = ["package-firmware.sh"],
)

sh_binary(
    name = "phase13_http_static_smoke",
    srcs = ["phase13-http-static-smoke.sh"],
)

sh_binary(
    name = "phase13_monitor_capture",
    srcs = ["phase13-monitor-capture.sh"],
)

sh_binary(
    name = "phase13_recovery_regression",
    srcs = ["phase13-recovery-regression.sh"],
)

sh_binary(
    name = "source_commit_stamp_tool",
    srcs = ["source-commit-stamp.sh"],
)

genrule(
    name = "source_commit_stamp",
    srcs = [
        "//:.git/HEAD",
        "//:.git/logs/HEAD",
    ],
    outs = ["source-commit.stamp"],
    cmd = "$(location :source_commit_stamp_tool) $@",
    local = True,
    tags = [
        "local",
        "no-sandbox",
    ],
    tools = [":source_commit_stamp_tool"],
)

sh_test(
    name = "detect_ultra205_test",
    srcs = ["detect-ultra205-test.sh"],
    data = ["detect-ultra205.sh"],
    tags = ["local"],
)

sh_test(
    name = "esp_doctor_test",
    srcs = ["esp-doctor-test.sh"],
    data = [
        "bootstrap-esp.sh",
        "esp-doctor.sh",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase13_http_static_smoke_test",
    srcs = ["phase13-http-static-smoke-test.sh"],
    data = ["phase13-http-static-smoke.sh"],
    tags = ["local"],
)

sh_test(
    name = "phase13_monitor_capture_test",
    srcs = ["phase13-monitor-capture-test.sh"],
    data = ["phase13-monitor-capture.sh"],
    tags = ["local"],
)

sh_test(
    name = "phase13_recovery_regression_test",
    srcs = ["phase13-recovery-regression-test.sh"],
    data = [
        "phase13-http-static-smoke.sh",
        "phase13-monitor-capture.sh",
        "phase13-recovery-regression.sh",
    ],
    tags = ["local"],
)

sh_test(
    name = "verify_reference_clean_test",
    srcs = ["verify-reference-clean-test.sh"],
    data = ["verify-reference-clean.sh"],
    tags = ["local"],
)
