load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "bootstrap_esp",
    srcs = ["bootstrap-esp.sh"],
)

sh_binary(
    name = "build_firmware",
    srcs = ["build-firmware.sh"],
)

sh_binary(
    name = "detect_ultra205",
    srcs = ["detect-ultra205.sh"],
    data = ["serial-session-trace.sh"],
)

sh_binary(
    name = "diagnose_ultra205_session",
    srcs = ["diagnose-ultra205-session.sh"],
    data = [
        "detect-ultra205.sh",
        "phase13-monitor-capture.sh",
        "process-group.sh",
        "serial-session-trace.sh",
    ],
)

sh_binary(
    name = "diagnose_ultra205_late_attach",
    srcs = ["diagnose-ultra205-late-attach.sh"],
    data = [
        "detect-ultra205.sh",
        "phase13-monitor-capture.sh",
        "phase13-os-native-reader.pl",
        "phase28.1.1-lifecycle-frame.pl",
        "process-group.sh",
        "serial-session-trace.sh",
        "ultra205-late-attach-broker.sh",
        "ultra205-late-attach-classifier.mjs",
        "ultra205-late-attach-worker.sh",
        "ultra205-transport-qualification.sh",
    ],
)

sh_binary(
    name = "diagnose_ultra205_uart_capture",
    srcs = ["diagnose-ultra205-uart-capture.sh"],
    data = [
        "detect-ultra205.sh",
        "phase13-monitor-capture.sh",
        "phase13-os-native-reader.pl",
        "phase13-uart-native-reader.py",
        "phase28.1.1-accepted-state-diagnostic.sh",
        "phase28.1.1-exact-head-hardware-attempt.sh",
        "phase28.1.1-lifecycle-frame.pl",
        "process-group.sh",
        "serial-session-trace.sh",
        "ultra205-late-attach-broker.sh",
        "ultra205-late-attach-classifier.mjs",
        "ultra205-transport-qualification.sh",
        "ultra205-uart-capture-broker.sh",
        "ultra205-uart-capture-classifier.mjs",
        "ultra205-uart-capture-worker.sh",
    ],
)

sh_binary(
    name = "esp_doctor",
    srcs = ["esp-doctor.sh"],
)

sh_binary(
    name = "verify_reference_clean",
    srcs = ["verify-reference-clean.sh"],
)

sh_binary(
    name = "package_firmware",
    srcs = ["package-firmware.sh"],
)

sh_binary(
    name = "phase13_firmware_ota_smoke",
    srcs = ["phase13-firmware-ota-smoke.sh"],
)

sh_binary(
    name = "phase13_http_static_smoke",
    srcs = ["phase13-http-static-smoke.sh"],
)

sh_binary(
    name = "phase16_http_static_smoke",
    srcs = ["phase16-http-static-smoke.sh"],
)

sh_binary(
    name = "phase17_live_http_api_smoke",
    srcs = ["phase17-live-http-api-smoke.sh"],
)

sh_binary(
    name = "phase18_firmware_ota_evidence",
    srcs = ["phase18-firmware-ota-evidence.sh"],
)

sh_binary(
    name = "phase19_recovery_otawww_evidence",
    srcs = ["phase19-recovery-otawww-evidence.sh"],
)

sh_binary(
    name = "phase20_failure_paths",
    srcs = ["phase20-failure-paths.sh"],
)

sh_binary(
    name = "phase13_monitor_capture",
    srcs = ["phase13-monitor-capture.sh"],
    data = [
        "phase13-os-native-reader.pl",
        "phase13-uart-native-reader.py",
        "process-group.sh",
        "serial-session-trace.sh",
    ],
)

sh_binary(
    name = "phase13_recovery_regression",
    srcs = ["phase13-recovery-regression.sh"],
)

sh_binary(
    name = "phase16_recovery_regression",
    srcs = ["phase16-recovery-regression.sh"],
)

sh_binary(
    name = "phase14_power_voltage",
    srcs = ["phase14-power-voltage.sh"],
)

sh_binary(
    name = "phase14_self_test_watchdog_load",
    srcs = ["phase14-self-test-watchdog-load.sh"],
)

sh_binary(
    name = "phase14_thermal_fan",
    srcs = ["phase14-thermal-fan.sh"],
)

sh_binary(
    name = "phase14_display_input",
    srcs = ["phase14-display-input.sh"],
)

sh_binary(
    name = "phase14_live_telemetry",
    srcs = ["phase14-live-telemetry.sh"],
)

sh_binary(
    name = "phase15_bm1366_diagnostic_package",
    srcs = ["phase15-bm1366-diagnostic-package.sh"],
)

sh_binary(
    name = "phase15_controlled_mining",
    srcs = ["phase15-controlled-mining.sh"],
    data = ["phase15-websocket-capture.mjs"],
)

sh_binary(
    name = "phase21_live_mining_evidence",
    srcs = ["phase21-live-mining-evidence.sh"],
    data = [
        "phase17-websocket-capture.mjs",
        "phase21-pool-input-bridge.sh",
        "phase21-pool-credentials-json.mjs",
    ],
)

sh_binary(
    name = "phase21_pool_input_bridge",
    srcs = ["phase21-pool-input-bridge.sh"],
    data = [
        "phase21-pool-credentials-json.mjs",
    ],
)

sh_binary(
    name = "phase23_redacted_operator_evidence",
    srcs = ["phase23-redacted-operator-evidence.sh"],
    data = [
        "phase17-live-http-api-smoke.sh",
        "phase17-websocket-capture.mjs",
        "phase21-live-mining-evidence.sh",
        "phase21-pool-credentials-json.mjs",
        "phase21-pool-input-bridge.sh",
        "//tools/parity:report",
    ],
)

sh_binary(
    name = "phase25_live_stratum_evidence",
    srcs = ["phase25-live-stratum-evidence.sh"],
    data = ["//tools/parity:report"],
)

sh_binary(
    name = "phase27_live_hardware_bridge_evidence",
    srcs = ["phase27-live-hardware-bridge-evidence.sh"],
    data = ["//tools/parity:report"],
)

sh_binary(
    name = "phase28_evidence",
    srcs = ["phase28-evidence.sh"],
    data = ["//tools/parity:report"],
)

sh_binary(
    name = "phase29_doc_redaction_check",
    srcs = ["phase29-doc-redaction-check.sh"],
    data = [
        "phase28.1.1-promoted-evidence-denylist.patterns",
        "phase28.1.1-promoted-evidence-denylist.sh",
    ],
)

sh_binary(
    name = "source_commit_stamp_tool",
    srcs = ["source-commit-stamp.sh"],
)

genrule(
    name = "source_commit_stamp",
    srcs = [
        "//:.git/HEAD",
        "//:.git/logs/HEAD",
    ],
    outs = ["source-commit.stamp"],
    cmd = "$(location :source_commit_stamp_tool) $@",
    local = True,
    tags = [
        "local",
        "no-sandbox",
    ],
    tools = [":source_commit_stamp_tool"],
)

sh_test(
    name = "detect_ultra205_test",
    srcs = ["detect-ultra205-test.sh"],
    data = [
        "detect-ultra205.sh",
        "serial-session-trace.sh",
    ],
    tags = ["local"],
)

sh_test(
    name = "diagnose_ultra205_session_test",
    srcs = ["diagnose-ultra205-session-test.sh"],
    data = ["diagnose-ultra205-session.sh"],
    tags = ["local"],
)

sh_test(
    name = "diagnose_ultra205_late_attach_test",
    srcs = ["diagnose-ultra205-late-attach-test.sh"],
    data = [
        "diagnose-ultra205-late-attach.sh",
        "phase13-os-native-reader.pl",
        "phase28.1.1-lifecycle-frame.pl",
        "process-group.sh",
        "serial-session-trace.sh",
        "ultra205-late-attach-broker.sh",
        "ultra205-late-attach-classifier.mjs",
        "ultra205-late-attach-worker.sh",
        "ultra205-transport-qualification.sh",
    ],
    env_inherit = [
        "HOME",
        "PATH",
    ],
    tags = ["local"],
)

sh_test(
    name = "diagnose_ultra205_uart_capture_test",
    srcs = ["diagnose-ultra205-uart-capture-test.sh"],
    data = [
        "detect-ultra205.sh",
        "diagnose-ultra205-uart-capture.sh",
        "phase13-monitor-capture.sh",
        "phase13-uart-native-reader.py",
        "phase28.1.1-accepted-state-diagnostic.sh",
        "phase28.1.1-exact-head-hardware-attempt.sh",
        "phase28.1.1-lifecycle-frame.pl",
        "process-group.sh",
        "serial-session-trace.sh",
        "ultra205-late-attach-broker.sh",
        "ultra205-late-attach-classifier.mjs",
        "ultra205-transport-qualification.sh",
        "ultra205-uart-capture-broker.sh",
        "ultra205-uart-capture-classifier-test.mjs",
        "ultra205-uart-capture-classifier.mjs",
        "ultra205-uart-capture-worker.sh",
    ],
    env_inherit = [
        "HOME",
        "PATH",
    ],
    tags = ["local"],
)

sh_test(
    name = "ultra205_late_attach_classifier_test",
    srcs = ["ultra205-late-attach-classifier-test.mjs"],
    data = ["ultra205-late-attach-classifier.mjs"],
    env_inherit = ["PATH"],
    tags = ["local"],
)

sh_test(
    name = "ultra205_uart_capture_classifier_test",
    srcs = ["ultra205-uart-capture-classifier-test.mjs"],
    data = [
        "ultra205-late-attach-classifier.mjs",
        "ultra205-uart-capture-classifier.mjs",
    ],
    env_inherit = ["PATH"],
    tags = ["local"],
)

sh_test(
    name = "serial_session_trace_test",
    srcs = ["serial-session-trace-test.sh"],
    data = ["serial-session-trace.sh"],
    tags = ["local"],
)

sh_test(
    name = "esp_doctor_test",
    srcs = ["esp-doctor-test.sh"],
    data = [
        "bootstrap-esp.sh",
        "esp-doctor.sh",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase13_firmware_ota_smoke_test",
    srcs = ["phase13-firmware-ota-smoke-test.sh"],
    data = [
        "phase13-firmware-ota-smoke.sh",
        "phase13-monitor-capture.sh",
        "process-group.sh",
        "serial-session-trace.sh",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase13_http_static_smoke_test",
    srcs = ["phase13-http-static-smoke-test.sh"],
    data = ["phase13-http-static-smoke.sh"],
    tags = ["local"],
)

sh_test(
    name = "phase16_http_static_smoke_test",
    srcs = ["phase16-http-static-smoke-test.sh"],
    data = ["phase16-http-static-smoke.sh"],
    tags = ["local"],
)

sh_test(
    name = "phase17_live_http_api_smoke_test",
    srcs = ["phase17-live-http-api-smoke-test.sh"],
    data = [
        "phase17-live-http-api-smoke.sh",
        "phase17-websocket-capture.mjs",
    ],
    env_inherit = [
        "HOME",
        "NODE_BIN",
        "NVM_DIR",
        "PATH",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase18_firmware_ota_evidence_test",
    srcs = ["phase18-firmware-ota-evidence-test.sh"],
    data = [
        "phase18-firmware-ota-evidence.sh",
        "phase13-firmware-ota-smoke.sh",
        "phase13-monitor-capture.sh",
        "process-group.sh",
        "serial-session-trace.sh",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase19_recovery_otawww_evidence_test",
    srcs = ["phase19-recovery-otawww-evidence-test.sh"],
    data = [
        "phase19-recovery-otawww-evidence.sh",
        "phase16-recovery-regression.sh",
        "phase16-http-static-smoke.sh",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase20_failure_paths_test",
    srcs = ["phase20-failure-paths-test.sh"],
    data = ["phase20-failure-paths.sh"],
    tags = ["local"],
)

sh_test(
    name = "phase13_monitor_capture_test",
    srcs = ["phase13-monitor-capture-test.sh"],
    data = [
        "//firmware/bitaxe:sdkconfig.defaults",
        "phase13-monitor-capture.sh",
        "phase13-os-native-reader.pl",
        "phase13-uart-native-reader.py",
        "phase13-uart-native-reader-test.py",
        "process-group.sh",
        "serial-session-trace.sh",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase13_recovery_regression_test",
    srcs = ["phase13-recovery-regression-test.sh"],
    data = [
        "phase13-http-static-smoke.sh",
        "phase13-monitor-capture.sh",
        "phase13-recovery-regression.sh",
        "process-group.sh",
        "serial-session-trace.sh",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase16_recovery_regression_test",
    srcs = ["phase16-recovery-regression-test.sh"],
    data = [
        "phase13-monitor-capture.sh",
        "phase16-http-static-smoke.sh",
        "phase16-recovery-regression.sh",
        "process-group.sh",
        "serial-session-trace.sh",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase14_power_voltage_test",
    srcs = ["phase14-power-voltage-test.sh"],
    data = ["phase14-power-voltage.sh"],
    tags = ["local"],
)

sh_test(
    name = "phase14_self_test_watchdog_load_test",
    srcs = ["phase14-self-test-watchdog-load-test.sh"],
    data = ["phase14-self-test-watchdog-load.sh"],
    tags = ["local"],
)

sh_test(
    name = "phase14_thermal_fan_test",
    srcs = ["phase14-thermal-fan-test.sh"],
    data = ["phase14-thermal-fan.sh"],
    tags = ["local"],
)

sh_test(
    name = "phase14_display_input_test",
    srcs = ["phase14-display-input-test.sh"],
    data = ["phase14-display-input.sh"],
    tags = ["local"],
)

sh_test(
    name = "phase14_live_telemetry_test",
    srcs = ["phase14-live-telemetry-test.sh"],
    data = ["phase14-live-telemetry.sh"],
    tags = ["local"],
)

sh_test(
    name = "phase15_bm1366_diagnostic_package_test",
    srcs = ["phase15-bm1366-diagnostic-package-test.sh"],
    data = ["phase15-bm1366-diagnostic-package.sh"],
    tags = ["local"],
)

sh_test(
    name = "phase15_controlled_mining_test",
    srcs = ["phase15-controlled-mining-test.sh"],
    data = [
        "phase15-controlled-mining.sh",
        "phase15-websocket-capture.mjs",
    ],
    env_inherit = [
        "HOME",
        "NODE_BIN",
        "NVM_DIR",
        "PATH",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase21_live_mining_evidence_test",
    srcs = ["phase21-live-mining-evidence-test.sh"],
    data = [
        "phase17-websocket-capture.mjs",
        "phase21-live-mining-evidence.sh",
        "phase21-pool-input-bridge.sh",
        "phase21-pool-credentials-json.mjs",
    ],
    env_inherit = [
        "HOME",
        "NODE_BIN",
        "NVM_DIR",
        "PATH",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase21_pool_input_bridge_test",
    srcs = ["phase21-pool-input-bridge-test.sh"],
    data = [
        "phase21-pool-credentials-json.mjs",
        "phase21-pool-input-bridge.sh",
    ],
    env_inherit = [
        "HOME",
        "NODE_BIN",
        "NVM_DIR",
        "PATH",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase23_redacted_operator_evidence_test",
    srcs = ["phase23-redacted-operator-evidence-test.sh"],
    data = [
        "phase17-live-http-api-smoke.sh",
        "phase17-websocket-capture.mjs",
        "phase21-live-mining-evidence.sh",
        "phase21-pool-credentials-json.mjs",
        "phase21-pool-input-bridge.sh",
        "phase23-redacted-operator-evidence.sh",
        "//tools/parity:report",
    ],
    env_inherit = [
        "HOME",
        "NODE_BIN",
        "NVM_DIR",
        "PATH",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase25_live_stratum_evidence_test",
    srcs = ["phase25-live-stratum-evidence-test.sh"],
    data = [
        "phase25-live-stratum-evidence.sh",
        "//tools/parity:report",
    ],
    env_inherit = [
        "HOME",
        "NODE_BIN",
        "NVM_DIR",
        "PATH",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase27_live_hardware_bridge_evidence_test",
    srcs = ["phase27-live-hardware-bridge-evidence-test.sh"],
    data = [
        "phase27-live-hardware-bridge-evidence.sh",
        "//tools/parity:report",
    ],
    env_inherit = [
        "HOME",
        "NODE_BIN",
        "NVM_DIR",
        "PATH",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase28_evidence_test",
    srcs = ["phase28-evidence-test.sh"],
    data = [
        "phase27-live-hardware-bridge-evidence.sh",
        "phase28-evidence.sh",
        "//tools/parity:report",
    ],
    env_inherit = [
        "HOME",
        "PATH",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase29_doc_redaction_check_test",
    srcs = ["phase29-doc-redaction-check-test.sh"],
    data = [
        "phase28.1.1-promoted-evidence-denylist.patterns",
        "phase28.1.1-promoted-evidence-denylist.sh",
        "phase29-doc-redaction-check.sh",
    ],
    env_inherit = ["PATH"],
    tags = ["local"],
)

sh_binary(
    name = "phase21_live_mining_package",
    srcs = ["phase21-live-mining-package.sh"],
    data = [
        "package-firmware.sh",
        "verify-reference-clean.sh",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase21_live_mining_package_test",
    srcs = ["phase21-live-mining-package-test.sh"],
    data = ["phase21-live-mining-package.sh"],
    tags = ["local"],
)

sh_test(
    name = "verify_reference_clean_test",
    srcs = ["verify-reference-clean-test.sh"],
    data = ["verify-reference-clean.sh"],
    tags = ["local"],
)

sh_binary(
    name = "phase28_1_1_exact_head_hardware_attempt",
    srcs = ["phase28.1.1-exact-head-hardware-attempt.sh"],
    data = [
        "detect-ultra205.sh",
        "diagnose-ultra205-uart-capture.sh",
        "diagnose-ultra205-late-attach.sh",
        "phase13-monitor-capture.sh",
        "phase13-os-native-reader.pl",
        "phase13-uart-native-reader.py",
        "phase28.1.1-accepted-state-diagnostic.sh",
        "phase28.1.1-hardware-attempt-state.mjs",
        "phase28.1.1-lifecycle-frame.pl",
        "phase28.1.1-strict-production-evidence.mjs",
        "process-group.sh",
        "serial-session-trace.sh",
        "ultra205-late-attach-broker.sh",
        "ultra205-late-attach-classifier.mjs",
        "ultra205-late-attach-worker.sh",
        "ultra205-transport-qualification.sh",
        "ultra205-uart-capture-broker.sh",
        "ultra205-uart-capture-classifier.mjs",
        "ultra205-uart-capture-worker.sh",
    ],
)

sh_test(
    name = "phase28_1_1_exact_head_hardware_attempt_test",
    srcs = ["phase28.1.1-exact-head-hardware-attempt-test.sh"],
    data = [
        "detect-ultra205.sh",
        "diagnose-ultra205-uart-capture.sh",
        "phase28.1.1-accepted-state-diagnostic.sh",
        "phase28.1.1-exact-head-hardware-attempt.sh",
        "phase28.1.1-hardware-attempt-state.mjs",
        "phase28.1.1-lifecycle-frame.pl",
        "phase28.1.1-strict-production-evidence.mjs",
        "process-group.sh",
        "serial-session-trace.sh",
        "diagnose-ultra205-late-attach.sh",
        "phase13-monitor-capture.sh",
        "phase13-os-native-reader.pl",
        "phase13-uart-native-reader.py",
        "ultra205-late-attach-broker.sh",
        "ultra205-late-attach-classifier.mjs",
        "ultra205-late-attach-worker.sh",
        "ultra205-transport-qualification.sh",
        "ultra205-uart-capture-broker.sh",
        "ultra205-uart-capture-classifier.mjs",
        "ultra205-uart-capture-worker.sh",
    ],
    env_inherit = [
        "HOME",
        "PATH",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase28_1_1_lifecycle_frame_test",
    srcs = ["phase28.1.1-lifecycle-frame-test.mjs"],
    data = ["phase28.1.1-lifecycle-frame.pl"],
    env_inherit = ["PATH"],
    tags = ["local"],
)

sh_binary(
    name = "phase28_1_1_roadmap_phase30_immutability",
    srcs = ["phase28.1.1-roadmap-phase30-immutability.mjs"],
)

sh_test(
    name = "phase28_1_1_software_authority_test",
    srcs = ["phase28.1.1-roadmap-phase30-immutability-test.mjs"],
    data = [
        "phase28.1.1-hardware-attempt-state-test.mjs",
        "phase28.1.1-hardware-attempt-state.mjs",
        "phase28.1.1-roadmap-phase30-immutability.mjs",
        "phase28.1.1-strict-production-evidence-test.mjs",
        "phase28.1.1-strict-production-evidence.mjs",
    ],
    env_inherit = [
        "HOME",
        "PATH",
    ],
    tags = ["local"],
)

sh_test(
    name = "phase28_1_1_boot_evidence_replay_ownership_test",
    srcs = ["phase28.1.1-boot-evidence-replay-ownership-test.sh"],
    data = [
        "//firmware/bitaxe:phase28_boot_replay_sources",
    ],
    env_inherit = ["PATH"],
    tags = ["local"],
)

sh_test(
    name = "phase28_1_1_accepted_state_lifecycle_compare_test",
    srcs = ["phase28.1.1-accepted-state-lifecycle-compare-test.mjs"],
    data = [
        "phase28.1.1-accepted-state-compare.mjs",
        "phase28.1.1-accepted-state-lifecycle-compare.mjs",
    ],
    env_inherit = ["PATH"],
    tags = ["local"],
)

sh_test(
    name = "phase28_1_1_hardware_attempt_state_test",
    srcs = ["phase28.1.1-hardware-attempt-state-test.mjs"],
    data = [
        "phase28.1.1-hardware-attempt-state.mjs",
        "phase28.1.1-strict-production-evidence.mjs",
    ],
    env_inherit = ["PATH"],
    tags = ["local"],
)

sh_test(
    name = "phase28_1_1_accepted_state_diagnostic_test",
    srcs = ["phase28.1.1-accepted-state-diagnostic-test.sh"],
    data = [
        "//:.git/HEAD",
        "//:.git/logs/HEAD",
        "detect-ultra205.sh",
        "diagnose-ultra205-uart-capture.sh",
        "diagnose-ultra205-late-attach.sh",
        "phase13-monitor-capture.sh",
        "phase13-os-native-reader.pl",
        "phase13-uart-native-reader.py",
        "phase28.1.1-accepted-state-compare.mjs",
        "phase28.1.1-accepted-state-diagnostic.sh",
        "phase28.1.1-accepted-state-lifecycle-compare.mjs",
        "phase28.1.1-exact-head-hardware-attempt.sh",
        "phase28.1.1-hardware-attempt-state.mjs",
        "phase28.1.1-lifecycle-frame.pl",
        "phase28.1.1-strict-production-evidence.mjs",
        "phase28.1.1-upstream-wire-capture.sh",
        "process-group.sh",
        "serial-session-trace.sh",
        "ultra205-late-attach-broker.sh",
        "ultra205-late-attach-classifier.mjs",
        "ultra205-late-attach-worker.sh",
        "ultra205-transport-qualification.sh",
        "ultra205-uart-capture-broker.sh",
        "ultra205-uart-capture-classifier.mjs",
        "ultra205-uart-capture-worker.sh",
    ],
    env_inherit = [
        "HOME",
        "PATH",
    ],
    tags = [
        "local",
        "no-sandbox",
    ],
)
