load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "bitaxe_api",
    srcs = [
        "src/asic.rs",
        "src/commands.rs",
        "src/lib.rs",
        "src/logs.rs",
        "src/mining.rs",
        "src/route_shell.rs",
        "src/scoreboard.rs",
        "src/settings.rs",
        "src/snapshot.rs",
        "src/statistics.rs",
        "src/system.rs",
        "src/telemetry.rs",
        "src/update_plan.rs",
        "src/websocket_state.rs",
        "src/wire.rs",
    ],
    compile_data = glob(["fixtures/**"], allow_empty = True),
    crate_name = "bitaxe_api",
    edition = "2021",
    deps = [
        "//crates/bitaxe-asic:bitaxe_asic",
        "//crates/bitaxe-config:bitaxe_config",
        "//crates/bitaxe-safety:bitaxe_safety",
        "//crates/bitaxe-stratum:bitaxe_stratum",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    crate = ":bitaxe_api",
    data = glob(["fixtures/**"], allow_empty = True),
)
