[package]
name = "bitaxe-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bitaxe-asic = { path = "../bitaxe-asic" }
bitaxe-config = { path = "../bitaxe-config" }
bitaxe-safety = { path = "../bitaxe-safety" }
bitaxe-stratum = { path = "../bitaxe-stratum" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
