load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "bitaxe_asic",
    srcs = [
        "src/bm1366/crc.rs",
        "src/bm1366/command.rs",
        "src/bm1366/observation.rs",
        "src/bm1366/packet.rs",
        "src/bm1366/registers.rs",
        "src/bm1366/result.rs",
        "src/bm1366/work.rs",
        "src/bm1366.rs",
        "src/error.rs",
        "src/dispatch.rs",
        "src/lib.rs",
    ],
    compile_data = glob(["fixtures/**"]),
    crate_name = "bitaxe_asic",
    deps = [
        "//crates/bitaxe-config:bitaxe_config",
        "@crates//:thiserror",
    ],
    edition = "2021",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "tests",
    crate = ":bitaxe_asic",
)
