load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "bitaxe_config",
    srcs = [
        "src/catalog.rs",
        "src/defaults.rs",
        "src/lib.rs",
        "src/nvs.rs",
        "src/persistence.rs",
        "src/settings.rs",
        "src/validation.rs",
    ],
    compile_data = glob(["fixtures/**"]),
    crate_name = "bitaxe_config",
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/bitaxe-core:bitaxe_core",
        "@crates//:serde",
        "@crates//:thiserror",
    ],
)

rust_test(
    name = "tests",
    crate = ":bitaxe_config",
    data = glob(["fixtures/**"]),
    deps = [
        "@crates//:serde_json",
    ],
)
