load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "bitaxe_stratum",
    srcs = [
        "src/error.rs",
        "src/jsonrpc.rs",
        "src/lib.rs",
        "src/v1.rs",
        "src/v1/coinbase.rs",
        "src/v1/controlled_runtime.rs",
        "src/v1/controlled_runtime/tests.rs",
        "src/v1/fake_pool.rs",
        "src/v1/live_runtime.rs",
        "src/v1/mining.rs",
        "src/v1/mining_loop.rs",
        "src/v1/messages.rs",
        "src/v1/production_work.rs",
        "src/v1/queue.rs",
        "src/v1/state.rs",
        "src/v1/submit_response.rs",
    ],
    compile_data = glob(["fixtures/**"]),
    crate_name = "bitaxe_stratum",
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "//crates/bitaxe-asic:bitaxe_asic",
        "//crates/bitaxe-config:bitaxe_config",
        "//crates/bitaxe-safety:bitaxe_safety",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror",
    ],
)

rust_test(
    name = "tests",
    crate = ":bitaxe_stratum",
)
