[package]
name = "bitaxe-stratum"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bitaxe-asic = { path = "../bitaxe-asic" }
bitaxe-config = { path = "../bitaxe-config" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
