load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "bitaxe_test_support",
    srcs = ["src/lib.rs"],
    crate_name = "bitaxe_test_support",
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = ["//crates/bitaxe-core:bitaxe_core"],
)

rust_test(
    name = "tests",
    crate = ":bitaxe_test_support",
)
