exports_files(["partitions-ultra205.csv"])

genrule(
    name = "firmware",
    # Cargo dependency: bitaxe-safety is wired in Cargo.toml and compiled by
    # //scripts:build_firmware.
    srcs = glob(["src/**/*.rs"]) + [
        "Cargo.toml",
        "build.rs",
        "partitions-ultra205.csv",
        "sdkconfig.defaults",
    ] + glob(["static/**"]),
    outs = ["bitaxe-firmware.elf"],
    cmd = "$(location //scripts:build_firmware) $(@D)",
    local = True,
    tags = [
        "local",
        "no-sandbox",
    ],
    tools = ["//scripts:build_firmware"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "firmware_image",
    srcs = ["//firmware/bitaxe:firmware"],
    outs = [
        "bitaxe-ultra205.elf",
        "esp-miner.bin",
        "www.bin",
        "otadata-initial.bin",
        "bitaxe-ultra205-factory.bin",
        "bitaxe-ultra205-package.json",
    ],
    cmd = "$(location //scripts:package_firmware) --reference-guard $(location //scripts:verify_reference_clean) --firmware-elf $(location //firmware/bitaxe:firmware) --out-dir $(@D) --manifest $(@D)/bitaxe-ultra205-package.json",
    local = True,
    tags = [
        "local",
        "no-sandbox",
    ],
    tools = [
        "//scripts:package_firmware",
        "//scripts:verify_reference_clean",
    ],
    visibility = ["//visibility:public"],
)
